--- a/css/i.css
+++ b/css/i.css
@@ -515,6 +515,9 @@ a {
   font-size: 16px; }
   .site-nav--item:last-child {
     border-right: none; }
+    @media screen and (min-width: 100px) and (max-width: 479px) {
+      .site-nav--item:last-child .site-nav--link {
+        padding-right: 0; } }
 
 .site-nav--link {
   font-weight: 400;
